# AgenticRagQuizGenerator

./: .gitignore  README.md  main.py  pyproject.toml  test_ingestion.py
backend/: database.py  main.py  schemas.py
backend/auth/: utils.py
backend/routers/: auth.py  rag.py
data/chroma_db/4750d164-50dc-4120-ba06-c628bcd157f0/: index_metadata.pickle
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/api/: client.js
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: Dashboard.jsx  Login.jsx  Signup.jsx
rag_core/: __init__.py  main.py
rag_core/agents/: analyst.py  hallucination_checker.py  quiz_creator.py  researcher.py  state.py
rag_core/graph/: visualize_graph.py  workflow.py
rag_core/ingestion/: loader.py  splitter.py  vectorstore.py
rag_core/tests/: test_analyst.py  test_hallucination_checker.py  test_ingestion.py  test_llm.py  test_quiz_creator.py  test_researcher.py
