[project]
name = "projectagenticrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.127.0",
    "langchain>=1.2.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.0",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.0.5",
    "passlib[argon2]>=1.7.4",
    "pydantic[email]>=2.12.5",
    "pypdf>=6.5.0",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.21",
    "sentence-transformers>=5.2.0",
    "uvicorn>=0.40.0",
    "argon2-cffi>=23.1.0",
]
[tool.setuptools.packages.find]
where = ["."]

